--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -43,11 +43,17 @@ Le nom **YunoHost** vient de l’argot Internet anglais « [Y U NO](https://kno
 
 ## Qu’est-ce que YunoHost n’est pas ?
 
-Même si YunoHost est multi-domaine et multi-utilisateur, il reste **inapproprié pour un usage mutualisé**.
+YunoHost n'est *pas* une entreprise ou une entité à but lucratif. Le projet est développé et maintenu par des bénévoles. Nous ne vendons pas de services, nous n'hébergeons ni ne contrôlons vos données ou services d'aucune manière, et nous n'avons aucune intention ni aucun intérêt à monétiser quoi que ce soit. Nous n'offrons pas non plus de garanties formelles. Notre objectif est simplement de développer et de maintenir YunoHost dans l'espoir qu'il contribue à un internet plus décentralisé et qu'il permette aux plus grand nombre d'obtenir la maîtrise et l'autonomie sur leurs services numériques et la technologie. Ceci étant dit, nous faisons de notre mieux pour fournir un support communautaire, et un support commercial peut être disponible par l'intermédiaire de tiers si nécessaire.
 
-Premièrement parce que le logiciel est trop jeune, donc non-testé et non-optimisé pour être mis en production pour des centaines d’utilisateurs en même temps. Et quand bien même, ce n’est pas le chemin que l’on souhaite faire suivre à YunoHost. La virtualisation se démocratise, et c’est une façon bien plus étanche et sécurisée de faire de la mutualisation.
+YunoHost en tant que projet n'est *pas* apolitique. Par sa nature même, YunoHost promeut un internet décentralisé et des technologies qui donnent du pouvoir au plus grand nombre. Nous rejetons l'idée selon laquelle la technologie serait intrinsèquement neutre, ou que les projets logiciels devraient rester neutres. De nombreux contributeurices au projet restent vigilant⋅e⋅s quant aux implications sociales et politiques de l'évolution des technologies, et soulignent l'importance d'être solidaire et de converger avec d'autres luttes telles que le féminisme, les droits et la visibilité des personnes LGBTQIA+, la justice environnementale et la justice sociale. Nous nous opposons fermement au fascisme, au sexisme, au racisme, à la xénophobie, à la [bigoterie](https://fr.wikipedia.org/wiki/Bigoterie), au validisme, à l'impérialisme, à l'extractivisme, à l'eugénisme et au [libertarianisme](https://fr.wikipedia.org/wiki/Libertarianisme) de droite. Si vous n'êtes pas en accord avec ces valeurs, nous vous encourageons à ne pas utiliser YunoHost et à chercher un autre système.
 
-Vous pouvez héberger vos amis, votre famille, votre association ou votre entreprise sans problème, mais vous devez **avoir confiance** en vos utilisateurs, et ils doivent de la même façon avoir confiance en vous. Si vous souhaitez tout de même fournir des services YunoHost à des inconnus, **un VPS entier par utilisateur** sera la meilleure solution.
+YunoHost n'est *pas* conçu pour « passer à l'échelle » au sens traditionnel du terme. Il est conçu pour un nombre relativement modeste de comptes et d'utilisateurices simultanés. Bien qu'il n'y ait pas de limite stricte - puisque les performances dépendent fortement de votre configuration spécifique - nous estimons que des ajustements techniques peuvent s'avérer nécessaires à partir de 250 à 500 comptes, ou de ~50 utilisateur⋅ice⋅s simultanés sur des applications gourmandes. Ceci étant dit, YunoHost peut aisément héberger des sites web ou autres services légers recevant des milliers de visites quotidiennes.
+
+YunoHost est avant tout conçu pour les personnes qui veulent que ça "juste marche". Évidemment, le projet n'est pas parfait - nous travaillons constamment à l'amélioration de l'expérience utilisateurice, à la robustesse et à la simplicité du système. Bien que YunoHost soit "bidouillable", la cible principale n'est pas les "power users" qui ont en tête des cas d'utilisation complexes ou hautement avancés. Nous vous encourageons à garder votre installation **aussi simple que possible**. Ceci étant dit, vous êtes les bienvenu⋅e⋅s à expérimenter et à nous faire part de vos retours !
+
+YunoHost n'est *pas* conçu pour être une solution de mutualisation *lourde* fournissant des services à de multiples organisations complètement séparées à travers différents domaines. Bien qu'il soit possible d'héberger des services pour des amis, des collègues, une association - le tout sous des domaines différents -, vous devez garder à l'esprit qu'il n'y a pas d'isolation stricte entre les applications. Sous le capot, toutes les applications partagent le même système et le même environnement.
+
+(Note pour les utilisateurs expérimentés) YunoHost n'utilise pas de technologie de conteneurisation "dure" telles que Docker pour les applications. Ceci découle à la fois de raisons historiques, mais aussi pour garder le système léger - à la fois en termes de ressources et de complexité technique. Cela dit, nous prenons la sécurité au sérieux : les applications fonctionnent sous des comptes d'utilisateurs dédiés avec des privilèges et des capacités limités, et nous travaillons continuellement à l'amélioration de la sécurité du système.
 
 ## Logo
 
