--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -16,6 +16,12 @@ import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
 
 ## <FAIcon icon="fa-list-alt"/> Pre-requisites
 
+:::note
+If you wish to install it on a Raspberry Pi 2, you can either
+  - follow this guide but with older image from Debian Buster ([Download here](https://repo.yunohost.org/images/attic/yunohost-buster-4.1.7.1-rpi-stable.img.zip)) and then  [upgrade the system](/admin/tutorials/upgrade)
+  - or install the RaspberryPi with no desktop such as [lite OS](https://www.raspberrypi.com/software/operating-systems/) and then follow the [On top of debian Guide](/admin/get_started/install_on/on_top_of_debian)
+:::
+
 - A Raspberry Pi 3, 4 or 5
   - A power supply (either an adapter or a USB cable) for your board;
   - A microSD card: 16GB capacity (at least), [class "A1"](https://en.wikipedia.org/wiki/SD_card#Class) highly recommended (such as [this SanDisk A1 card](https://www.amazon.fr/SanDisk-microSDHC-Adaptateur-homologu%C3%A9e-Nouvelle/dp/B073JWXGNT/));
