fix issues 2207: new error img, fix reference to admin

--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
@@ -124,7 +124,7 @@ Fournir un tutoriel complet sur la ligne de commande est bien au-delà du cadre 
 
 ### La commande `yunohost`
 
-La commande `yunohost` peut être utilisée pour administrer votre serveur ou réaliser les mêmes actions que celles disponibles sur la webadmin. Elle doit être lancée depuis l'utilisateur `root`, ou bien depuis l'utilisateur `admin` en précédant la commande de `sudo`. (ProTip™ : il est possible de devenir `root` via la commande `sudo su` en tant qu'`admin`.)
+La commande `yunohost` peut être utilisée pour administrer votre serveur ou réaliser les mêmes actions que celles disponibles sur la webadmin. Elle doit être lancée depuis l'utilisateur `root`, ou bien depuis un utilisateur memble du group `admins` en précédant la commande de `sudo`. (ProTip™ : il est possible de devenir `root` via la commande `sudo su` en tant qu'utilisateur membre du group `admins`.)
 
 Les commandes YunoHost ont ce type de structure :
 
