--- a/docs/admin/15.command_line.mdx
+++ b/docs/admin/15.command_line.mdx
@@ -21,7 +21,7 @@ The command line interface (CLI) is, in the computer world, the original (and mo
 ### Credentials *after* running the postinstall
 
 
-During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the `admin` user is unusable).
+During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the users members of the `admins` group are unusables).
 
 :::tip
 If you connected with the administration account and would like to become `root` for convenience (e.g. to avoid typing `sudo` in front of every command), you can become `root` using the command `sudo su` or `sudo -i`.
@@ -124,7 +124,7 @@ Providing a full tutorial about the command line is quite beyond the scope of th
 
 ### The `yunohost` command
 
-The `yunohost` command can be used to administer your server and perform the various actions similarly to what you do on the webadmin. The command must be launched either from the `root` user or from the `admin` user by preceeding them with `sudo`. (ProTip™ : you can become `root` with the command `sudo su` as `admin`).
+The `yunohost` command can be used to administer your server and perform the various actions similarly to what you do on the webadmin. The command must be launched either from the `root` user or from a user member of the `admins` group by preceeding them with `sudo`. (ProTip™ : you can become `root` with the command `sudo su` as an user member of `admins` group).
 
 YunoHost commands usually have this kind of structure :
 
@@ -171,7 +171,7 @@ If your administration web interface indicates that the API is unreachable, try 
 systemctl start yunohost-api
 ```
 
-If you can no longer connect with the user `admin` via SSH and via the web interface, the `slapd` service may be down, try restarting it:
+If you can no longer connect with an user member of `admins` group via SSH and via the web interface, the `slapd` service may be down, try restarting it:
 
 ```bash
 systemctl restart slapd
