Improved conf_regen part with naming convention and files location

--- a/docs/packaging/60.advanced/50.hooks.mdx
+++ b/docs/packaging/60.advanced/50.hooks.mdx
@@ -646,6 +646,13 @@ This hook is run during the command `yunohost tools regen-conf` or equivalent ac
 
 This hook is called several times with different actions keywords (pre and post operations).
 
+In order to be taken into account, the conf_regen hooks must:
+1. be present in the folder `/etc/yunohost/hooks.d/conf_regen`
+2. follow the naming convention `dd-sss_xxx`.
+`dd` are 2 digits and should be higher than the ones from the default hook (present in `/usr/share/yunohost/hooks/conf_regen`).
+`sss` is a string that defines the kind of hook (eg. `ssh` or `postfix`).
+`xxx` is a free field to help remind what is inside that hook.
+
 #### Environment variables
 
 - YNH_DOMAINS: The list of domains managed by YunoHost separated by comma
