--- a/docs/admin/05.get_started/10.providers/20.servers.mdx
+++ b/docs/admin/05.get_started/10.providers/20.servers.mdx
@@ -13,6 +13,10 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (dedicated server)
 
+* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/>
+
 ## YunoHost IT outsourcing
 
 * [ReflexLibre](https://reflexlibre.net) (France only) <HighlightCHATONS/>
+
+* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (France only) <HighlightCHATONS/>
