--- a/docs/admin/05.get_started/10.providers/05.registrar/namecheap.mdx
+++ b/docs/admin/05.get_started/10.providers/05.registrar/namecheap.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_label: Namecheap
 title: Obtaining an API key from Namecheap
+slug: /registrar_api_namecheap
 ---
 
 See the [API Documentation](https://www.namecheap.com/support/api/intro/) for reference.
