--- a/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
+++ b/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_label: OVH DNS config via API
 title: Obtaining an API key from OVH
+slug: /registrar_api_ovh
 ---
 
 This page is meant to guide you in obtaining an API key from OVH in order to configure YunoHost's automatic DNS configuration mecanism
