--- a/docs/admin/45.tutorials/05.domains/dns_nohost_me.mdx
+++ b/docs/admin/45.tutorials/05.domains/dns_nohost_me.mdx
@@ -2,7 +2,7 @@
 title: Nohost.me domains
 ---
 
-In order to make self-hosting as accessible as possible, the YunoHost Project provides a *free* and *automatically configured* domain name service. By using this service, you won't have to [configure DNS records](/admin/get_started/post_install/dns_config) yourself, which can be tedious and technical.
+In order to make self-hosting as accessible as possible, the YunoHost Project provides a *free* and *automatically configured* domain name service. By using this service, you won't have to [configure DNS records](/dns) yourself, which can be tedious and technical.
 
 The following (sub)domains are offered:
 
