--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
@@ -15,9 +15,9 @@ Los emails son un ecosistema complicado y una multitud de detalles puedes impedi
 
 Para validar que tu configuración es correcta :
 
-- si te alojas en casa y que no tienes VPN, asegúrate de que [tu proveedor de Internet no esté bloqueando el puerto 25](/admin/get_started/providers/isp/) ;
-- redirige los puertos siguiendo [esta documentación](/admin/get_started/post_install/port_forwarding) ;
-- configura con cuidado los registros DNS del correo electrónico siguiendo [esta documentación](/admin/get_started/post_install/dns_config) ;
+- si te alojas en casa y que no tienes VPN, asegúrate de que [tu proveedor de Internet no esté bloqueando el puerto 25](/admin/self_hosting/providers/isp/) ;
+- redirige los puertos siguiendo [esta documentación](/admin/install/post_install/port_forwarding) ;
+- configura con cuidado los registros DNS del correo electrónico siguiendo [esta documentación](/dns) ;
 - test your configuration using the diagnostic features (<HighlightWebAdmin/> → <HighlightDiagnosis/> → <Highlight no_break={true} color='grey'><FAIcon icon="fa-envelope"/> Email</Highlight> ). You can also use [mail-tester.com](https://mail-tester.com), a score of at least 8~9/10 is a reasonnable goal <small>(be careful : only 3 tests per domain per day are allowed)</small>
 
 Una nota de al menos 8~9/10 es un objetivo razonable.
