--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/15.noaccess.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/15.noaccess.mdx
@@ -24,7 +24,7 @@ Vérifier que vous arrivez à accéder au serveur en utilisant son IP globale (q
 Ce n'est pas nécessaire si vous utilisez un domaine de type `nohost.me`, `noho.st` ou `ynh.fr`)
 :::
 
-Il vous faut configurer vos enregistrement DNS comme expliqué sur [cette page](/admin/get_started/post_install/dns_config) (à minima l'enregistrement A, et AAAA si vous avez de l'IPv6).
+Il vous faut configurer vos enregistrement DNS comme expliqué sur [cette page](/dns) (à minima l'enregistrement A, et AAAA si vous avez de l'IPv6).
 
 Vous pouvez valider que les enregistrements DNS sont corrects en comparant le résultat de[this service](https://www.whatsmydns.net/) avec l'IP globale de votre serveur (si vous êtes hébergé à la maison, vous pouvez obtenir cette IP sur [IP given by our service](https://ip.yunohost.org).
 
