--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/manualdns.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/manualdns.mdx
@@ -13,7 +13,7 @@ Scegliete la sezione **Zona DNS**, e poi **Aggiungere un record**:
 
 ![OVH website screenshot](/img/providers/ovh_dns_zone.png?resize=800)
 
-Ora dovrete aggiungere la redirezione del DNS così come specificato nella [configurazione standard delle zone del DNS](/admin/get_started/post_install/dns_config)
+Ora dovrete aggiungere la redirezione del DNS così come specificato nella [configurazione standard delle zone del DNS](/dns)
 
 Cliccate su "Modifica in modalità testo", lasciando invariate le prime 4 righe:
 
@@ -24,7 +24,7 @@ $TTL 3600
                          IN NS     ns104.ovh.net.
 ```
 
-cancellate tutto il resto e sostituitelo con la configurazione necessaria per raggiungere il vostro server come illustrato nel paragrafo [questa pagina](/admin/get_started/post_install/dns_config).
+cancellate tutto il resto e sostituitelo con la configurazione necessaria per raggiungere il vostro server come illustrato nel paragrafo [questa pagina](/dns).
 
 ### IP dinamico
 
