--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/15.noaccess.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/15.noaccess.mdx
@@ -21,7 +21,7 @@ Controlla di riuscire ad accedere al server usando l'IP pubblico (lo puoi trovar
 Questo non è un problema se stai usando un dominio fornito da `nohost.me`, `noho.st` or `ynh.fr`
 :::
 
-Devi configurare i tuoi [record DNS](/admin/get_started/post_install/dns_config) (come minimo i record `A` e `AAAA` se usi una connessione IPv6).
+Devi configurare i tuoi [record DNS](/dns) (come minimo i record `A` e `AAAA` se usi una connessione IPv6).
 
 Puoi verificare la correttezza dei record DNS confrontando i risultati dati da [questo servizio](https://www.whatsmydns.net/) con l'[IP restituito dal nostro servizio](https://ip.yunohost.org).
 
