Revert "fix https://github.com/YunoHost/doc/issues/2620"
This reverts commit b4d99147551f85a16a57cb5a3fc124eb1c79cabc.

--- a/docs/admin/05.get_started/10.providers/05.registrar/index.mdx
+++ b/docs/admin/05.get_started/10.providers/05.registrar/index.mdx
@@ -14,6 +14,6 @@ The list below can help you to choose a registrar if you plan to buy a domain na
 
 | Registrar                           | Compatibility               | Easy to obtain an API key | Howto |
 |-------------------------------------|-----------------------------|---------------------------|-------|
-| [Gandi](https://www.gandi.net)      | ✘ (broken)                  | ✘   | [Obtain an API key](/registrar_api_gandi) <br/> [See bug here](https://github.com/YunoHost/issues/issues/2419) |
-| [OVH](https://ovh.com/domaines)     | ✔ (tested)                  | ✘   | [Obtain an API key](/registrar_api_ovh) <br/> [Configure manually](/registrar_api_ovh_manual) |
-| [Namecheap](https://namecheap.com)  | ✘ (in lexicon but untested) | ✘✘✘ API not available without 50$ on the account | [Obtain an API key](/registrar_api_namecheap) |
+| [Gandi](https://www.gandi.net)      | ✘ (broken)                  | ✘   | [Obtain an API key](/admin/get_started/providers/registrar/gandi) <br/> [See bug here](https://github.com/YunoHost/issues/issues/2419) |
+| [OVH](https://ovh.com/domaines)     | ✔ (tested)                  | ✘   | [Obtain an API key](/admin/get_started/providers/registrar/ovh/autodns) <br/> [Configure manually](/admin/get_started/providers/registrar/ovh/manualdns) |
+| [Namecheap](https://namecheap.com)  | ✘ (in lexicon but untested) | ✘✘✘ API not available without 50$ on the account | [Obtain an API key](/admin/get_started/providers/registrar/namecheap) |
