--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/manualdns.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/manualdns.mdx
@@ -13,7 +13,7 @@ Cliquez sur l'onglet **Zone DNS**, puis sur **Ajouter une entrée** :
 
 ![OVH website screenshot](/img/providers/ovh_dns_zone.png?resize=800)
 
-Il faut maintenant ajouter les redirections DNS telles que spécifiées par la [configuration standard de la zone DNS](/dns)
+Il faut maintenant ajouter les redirections DNS telles que spécifiées par la [configuration standard de la zone DNS](/admin/get_started/post_install/dns_config)
 
 Cliquez sur « Change in text format », conservez les quatre premières lignes :
 
@@ -24,7 +24,7 @@ $TTL 3600
                          IN NS     ns104.ovh.net.
 ```
 
-puis effacez tout ce qui suit, et remplacez-le par la configuration générée par YunoHost comme expliqué dans [cette page] (/dns).
+puis effacez tout ce qui suit, et remplacez-le par la configuration générée par YunoHost comme expliqué dans [cette page] (/admin/get_started/post_install/dns_config).
 
 ### IP dynamique
 
