--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
@@ -15,9 +15,9 @@ La posta elettronica è un ecosistema complesso con un numero elevato di dettagl
 
 Per assicurarsi una configurazione corretta:
 
-- se installate il server a casa e non utilizzate una VPN, assicuratevi che  [il vostro internet provider non blocchi la porta 25](/admin/self_hosting/providers/isp/) ;
-- reindirizzate le porte [seguendo questa documentazione](/admin/install/post_install/port_forwarding) ;
-- configurate con cura i record DNS riguardanti il servizio mail seguendo [questa documentazione](/dns) ;
+- se installate il server a casa e non utilizzate una VPN, assicuratevi che  [il vostro internet provider non blocchi la porta 25](/admin/get_started/providers/isp/) ;
+- reindirizzate le porte [seguendo questa documentazione](/admin/get_started/post_install/port_forwarding) ;
+- configurate con cura i record DNS riguardanti il servizio mail seguendo [questa documentazione](/admin/get_started/post_install/dns_config) ;
 - test your configuration using the diagnostic features (<HighlightWebAdmin/> → <HighlightDiagnosis/> → <Highlight no_break={true} color='grey'><FAIcon icon="fa-envelope"/> Email</Highlight> ). You can also use [mail-tester.com](https://mail-tester.com), a score of at least 8~9/10 is a reasonnable goal <small>(be careful : only 3 tests per domain per day are allowed)</small>
 
 ## Programmi (client) per la posta elettronica
