--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -7,9 +7,13 @@
     "message": "What is YunoHost?",
     "description": "The label for category What is YunoHost? in sidebar admin"
   },
-  "sidebar.admin.category.Self-hosting": {
-    "message": "Self-hosting",
-    "description": "The label for category Self-hosting in sidebar admin"
+  "sidebar.admin.category.🚀 Get started": {
+    "message": "🚀 Get started",
+    "description": "The label for category 🚀 Get started in sidebar admin"
+  },
+  "sidebar.admin.category.🚀 Get started.link.generated-index.title": {
+    "message": "🚀 Get started",
+    "description": "The generated-index page title for category 🚀 Get started in sidebar admin"
   },
   "sidebar.admin.category.Providers": {
     "message": "Providers",
@@ -35,10 +39,6 @@
     "message": "VPN providers",
     "description": "The label for category VPN providers in sidebar admin"
   },
-  "sidebar.admin.category.Install": {
-    "message": "Install",
-    "description": "The label for category Install in sidebar admin"
-  },
   "sidebar.admin.category.Install on...": {
     "message": "Install on...",
     "description": "The label for category Install on... in sidebar admin"
@@ -51,93 +51,53 @@
     "message": "Configure your network to access your server",
     "description": "The generated-index page description for category After installation in sidebar admin"
   },
-  "sidebar.admin.category.Users and the SSO": {
-    "message": "Users and the SSO",
-    "description": "The label for category Users and the SSO in sidebar admin"
+  "sidebar.admin.category.👥 Accounts and app portal": {
+    "message": "👥 Accounts and app portal",
+    "description": "The label for category 👥 Accounts and app portal in sidebar admin"
+  },
+  "sidebar.admin.category.🌐 Domains": {
+    "message": "🌐 Domains",
+    "description": "The label for category 🌐 Domains in sidebar admin"
+  },
+  "sidebar.admin.category.📦 Applications": {
+    "message": "📦 Applications",
+    "description": "The label for category 📦 Applications in sidebar admin"
+  },
+  "sidebar.admin.category.📬 Emails": {
+    "message": "📬 Emails",
+    "description": "The label for category 📬 Emails in sidebar admin"
+  },
+  "sidebar.admin.category.🚑 Backups": {
+    "message": "🚑 Backups",
+    "description": "The label for category 🚑 Backups in sidebar admin"
+  },
+  "sidebar.admin.category.📜 Tutorials": {
+    "message": "📜 Tutorials",
+    "description": "The label for category 📜 Tutorials in sidebar admin"
+  },
+  "sidebar.admin.category.📜 Tutorials.link.generated-index.title": {
+    "message": "📜 Tutorials",
+    "description": "The generated-index page title for category 📜 Tutorials in sidebar admin"
   },
   "sidebar.admin.category.Domains": {
     "message": "Domains",
     "description": "The label for category Domains in sidebar admin"
   },
-  "sidebar.admin.category.Applications": {
-    "message": "Applications",
-    "description": "The label for category Applications in sidebar admin"
-  },
-  "sidebar.admin.category.Backups": {
-    "message": "Backups",
-    "description": "The label for category Backups in sidebar admin"
-  },
-  "sidebar.admin.category.Backups.link.generated-index.title": {
-    "message": "Backups",
-    "description": "The generated-index page title for category Backups in sidebar admin"
-  },
-  "sidebar.admin.category.Tutorials": {
-    "message": "Tutorials",
-    "description": "The label for category Tutorials in sidebar admin"
-  },
-  "sidebar.admin.category.Tutorials.link.generated-index.title": {
-    "message": "Tutorials",
-    "description": "The generated-index page title for category Tutorials in sidebar admin"
-  },
   "sidebar.admin.category.Domains.link.generated-index.title": {
     "message": "Domains",
     "description": "The generated-index page title for category Domains in sidebar admin"
   },
-  "sidebar.admin.category.Troubleshooting": {
-    "message": "Troubleshooting",
-    "description": "The label for category Troubleshooting in sidebar admin"
+  "sidebar.admin.category.🐞 Troubleshooting": {
+    "message": "🐞 Troubleshooting",
+    "description": "The label for category 🐞 Troubleshooting in sidebar admin"
   },
-  "sidebar.admin.category.Upgrades": {
-    "message": "Upgrades",
-    "description": "The label for category Upgrades in sidebar admin"
+  "sidebar.admin.category.✨ Upgrades": {
+    "message": "✨ Upgrades",
+    "description": "The label for category ✨ Upgrades in sidebar admin"
   },
   "sidebar.admin.category.Migrating from 11.x to 12.x": {
     "message": "Migrating from 11.x to 12.x",
     "description": "The label for category Migrating from 11.x to 12.x in sidebar admin"
-  },
-  "sidebar.dev.category.Write documentation": {
-    "message": "Write documentation",
-    "description": "The label for category Write documentation in sidebar dev"
-  },
-  "sidebar.packaging.category.Advanced": {
-    "message": "Advanced",
-    "description": "The label for category Advanced in sidebar packaging"
-  },
-  "sidebar.packaging.category.Advanced.link.generated-index.title": {
-    "message": "Advanced",
-    "description": "The generated-index page title for category Advanced in sidebar packaging"
-  },
-  "sidebar.packaging.category.Misc resources": {
-    "message": "Misc resources",
-    "description": "The label for category Misc resources in sidebar packaging"
-  },
-  "sidebar.packaging.category.Misc resources.link.generated-index.title": {
-    "message": "Misc resources",
-    "description": "The generated-index page title for category Misc resources in sidebar packaging"
-  },
-  "sidebar.user.link.App Store": {
-    "message": "App Store",
-    "description": "The label for link App Store in sidebar user, linking to https://apps.yunohost.org"
-  },
-  "sidebar.admin.link.App Store": {
-    "message": "App Store",
-    "description": "The label for link App Store in sidebar admin, linking to https://apps.yunohost.org"
-  },
-  "sidebar.dev.category.Contribute to the core": {
-    "message": "Contribute to the core",
-    "description": "The label for category Contribute to the core in sidebar dev"
-  },
-  "sidebar.packaging.category.The manifest": {
-    "message": "The manifest",
-    "description": "The label for category The manifest in sidebar packaging"
-  },
-  "sidebar.packaging.category.The scripts": {
-    "message": "The scripts",
-    "description": "The label for category The scripts in sidebar packaging"
-  },
-  "sidebar.admin.category.Emails": {
-    "message": "Emails",
-    "description": "The label for category Emails in sidebar admin"
   },
   "sidebar.devpackaging.category.Write documentation": {
     "message": "Write documentation",
