--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -1,40 +1,4 @@
 {
-  "link.title.Community": {
-    "message": "Community",
-    "description": "The title of the footer links column with title=Community in the footer"
-  },
-  "copyright": {
-    "message": "Build with Docusaurus for YunoHost",
-    "description": "The footer copyright"
-  },
-  "link.title.Contribute": {
-    "message": "Contribute",
-    "description": "The title of the footer links column with title=Contribute in the footer"
-  },
-  "link.item.label.Website": {
-    "message": "Website",
-    "description": "The label of footer link with label=Website linking to https://yunohost.org/"
-  },
-  "link.item.label.Forum": {
-    "message": "Forum",
-    "description": "The label of footer link with label=Forum linking to https://forum.yunohost.org/"
-  },
-  "link.item.label.Donate": {
-    "message": "Donate",
-    "description": "The label of footer link with label=Donate linking to https://donate.yunohost.org/"
-  },
-  "link.item.label.GitHub (core)": {
-    "message": "GitHub (core)",
-    "description": "The label of footer link with label=GitHub (core) linking to https://github.com/YunoHost"
-  },
-  "link.item.label.GitHub (apps)": {
-    "message": "GitHub (apps)",
-    "description": "The label of footer link with label=GitHub (apps) linking to https://github.com/YunoHost-Apps"
-  },
-  "link.item.label.Translate": {
-    "message": "Translate",
-    "description": "The label of footer link with label=Translate linking to https://translate.yunohost.org/"
-  },
   "link.title.Legal": {
     "message": "Legal",
     "description": "The title of the footer links column with title=Legal in the footer"
@@ -47,13 +11,17 @@
     "message": "Use",
     "description": "The title of the footer links column with title=Use in the footer"
   },
+  "link.title.Contribute": {
+    "message": "Contribute",
+    "description": "The title of the footer links column with title=Contribute in the footer"
+  },
   "link.item.label.License": {
     "message": "License",
     "description": "The label of footer link with label=License linking to https://github.com/YunoHost/yunohost/blob/dev/LICENSE"
   },
   "link.item.label.CGUs": {
     "message": "CGUs",
-    "description": "The label of footer link with label=CGUs linking to https://doc.yunohost.org/terms_of_services"
+    "description": "The label of footer link with label=CGUs linking to /community/terms_of_services"
   },
   "link.item.label.Organization": {
     "message": "Organization",
@@ -73,15 +41,19 @@
   },
   "link.item.label.Documentation": {
     "message": "Documentation",
-    "description": "The label of footer link with label=Documentation linking to https://doc.yunohost.org/"
+    "description": "The label of footer link with label=Documentation linking to /"
   },
   "link.item.label.Apps catalog": {
     "message": "Apps catalog",
     "description": "The label of footer link with label=Apps catalog linking to https://apps.yunohost.org/"
   },
+  "link.item.label.Forum": {
+    "message": "Forum",
+    "description": "The label of footer link with label=Forum linking to https://forum.yunohost.org/"
+  },
   "link.item.label.Ask for help": {
     "message": "Ask for help",
-    "description": "The label of footer link with label=Ask for help linking to https://doc.yunohost.org/help"
+    "description": "The label of footer link with label=Ask for help linking to /community/help"
   },
   "link.item.label.Service status": {
     "message": "Service status",
@@ -91,9 +63,29 @@
     "message": "Changelog",
     "description": "The label of footer link with label=Changelog linking to https://github.com/YunoHost/yunohost/blob/dev/debian/changelog"
   },
+  "link.item.label.Donate": {
+    "message": "Donate",
+    "description": "The label of footer link with label=Donate linking to https://donate.yunohost.org/"
+  },
   "link.item.label.Issues": {
     "message": "Issues",
     "description": "The label of footer link with label=Issues linking to https://github.com/YunoHost/issues/issues"
+  },
+  "link.item.label.GitHub (core)": {
+    "message": "GitHub (core)",
+    "description": "The label of footer link with label=GitHub (core) linking to https://github.com/YunoHost"
+  },
+  "link.item.label.GitHub (apps)": {
+    "message": "GitHub (apps)",
+    "description": "The label of footer link with label=GitHub (apps) linking to https://github.com/YunoHost-Apps"
+  },
+  "link.item.label.Translate": {
+    "message": "Translate",
+    "description": "The label of footer link with label=Translate linking to https://translate.yunohost.org/"
+  },
+  "copyright": {
+    "message": "Build with Docusaurus for YunoHost",
+    "description": "The footer copyright"
   },
   "logo.alt": {
     "message": "Yunohost Logo",
