--- a/docs/packaging/10.manifest/index.mdx
+++ b/docs/packaging/10.manifest/index.mdx
@@ -76,7 +76,7 @@ ram.runtime = "1M"
 - `helpers_version` (`str`) contains the version of the package helpers used by the application; supported versions are [2.0](/packaging/scripts/helpers_v2.0) and [2.1](/packaging/scripts/helpers_v2.1)
 - `architectures` : `"all"` OR a list of supported archs using the `dpkg --print-architecture` nomenclature, i.e. among : `amd64` (= x86 64bit), `i386` (= x86 32bit), `armhf` (= ARM 32bit), `arm64` (= ARM 64bit)
 - `multi_instance` (`bool`) : wether or not the app supports being installed multiple time <small>(in which case, during installation, the actual app id is not just the `id` of the manifest, but something like `hellowold__2`, `helloworld__3`, etc. for subsequent installs)</small>
-- `ldap` (`bool` OR `"not_relevant"`) :  not to confused with the `sso` key : this corresponds to wether or not the app is configured to use YunoHost's LDAP DB as the user account DB. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). LDAP integration is often a prerequisite for the SSO to work. Note to set this to true, your app must have a LDAP configuration inside his configuration, so your app will connect to the Yunohost ldap server to retrive the accounts and/or groups informations. If it's not the case this should not be set to true.
+- `ldap` (`bool` OR `"not_relevant"`) :  not to confused with the `sso` key : this corresponds to wether or not the app is configured to use YunoHost's LDAP DB as the user account DB. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). LDAP integration is often a prerequisite for the SSO to work. Setting it to `true` should mean that your app queries the Yunohost LDAP to retrieve accounts and/or groups, otherwise set it to either `false` or `"not_relevant"`.
 - `sso` (`bool` OR `"not_relevant"`) : not to be confused with the `ldap` key : this corresponds to wether or not a user is *automatically logged-in* on the app when logged-in on the YunoHost portal. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). When set to true this could cover different cases. For the apps which provision the user account information only from the HTTP header (and not from LDAP), you should set `sso = true` and `ldap = false`. When the app is only a web client (related to an account), (for instance [Element](https://github.com/YunoHost-Apps/element_ynh) or [Agendav](https://github.com/YunoHost-Apps/agendav_ynh)), in this case if the client support the SSO feature this should be set to `true`. In this case the application might not require any configuration to work with the SSO. Also the possibility to use the SSO could also depends of if the sever support the SSO. For the apps like this we will consider the availability of the SSO one the client and not in the server.
 - `disk` (size) : an *estimate* minimum disk requirement. For example: 20M, 400M, 1G, ...
 - `ram.build` (size) : an *estimate* minimum ram requirement when building the app (this may be way different than `ram.runtime` because some apps have a peak 1~2G RAM when building sometimes...). For example: 50M, 400M, 1G, ...
