--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -52,13 +52,42 @@ If you want to create subdomains, do not forget to add them in the `hosts` file 
 ```
 </details>
 
-This will be the domain used by your server's users to access the **authentication portal**. You can later add other domains, and change which one is the main domain if needed.
+This will be the domain used by your server's users to access the **authentication portal**. 
 
-- If you're new to self-hosting and do not already have a domain name, we recommend using a **.nohost.me** / **.noho.st** / **.ynh.fr** (e.g. `homersimpson.nohost.me`). Provided that it's not already taken, the domain will be configured automatically and you won't need any further configuration step. Please note that the downside is that you won't have full-control over the DNS configuration.
-- If you already own a domain name, you probably want to use it here. You will later need to configure DNS records as explained [here](/admin/get_started/post_install/dns_config).
+You should be presented with 3 options (reviewed [in details here](/admin/domains)):
+
+<Tabs groupId="domain-choice">
+  <TabItem value="yunohost-domains" label="YunoHost's free domains">
+
+  If you're new to self-hosting and do not already have a domain name, we recommend using the free domain provided by YunoHost.
+  You get multiple base domain choices:  `.nohost.me` / `.noho.st` / `.ynh.fr` for
+  which you must specify the subdomain you want to use (e.g. `homersimpson.nohost.me`).
+  
+  Provided that it's not already taken, the domain will be configured automatically and you won't need any further configuration step
+  (but as a downside you won't have full-control over its DNS configuration).
+
+  [more details on YunoHost's free domains](/admin/tutorials/domains/dns_nohost_me)
+
+  </TabItem>
+  <TabItem value="own-domain" label="Your own domain">
+
+  If you already own a domain name, you probably want to use it here. You will later need to configure DNS records as explained [here](/admin/get_started/post_install/dns_config).
+
+  You can also configure a [subdomain](https://en.wikipedia.org/wiki/Subdomain) if your
+  main domain is already in use for other services.
+
+  </TabItem>
+  <TabItem value="local-domain" label="Local domains">
+  
+  Because yes, you *have to* configure a domain name. And if none of the above options are
+  satisfying, you can set up a dummy domain such as `yolo.test` and tweak your **local** `/etc/hosts` file such that this dummy domain [points to the appropriate IP, as explained here](/admin/tutorials/domains/dns_local_network).
+
+  </TabItem>
+</Tabs>
 
 :::tip
-Yes, you *have to* configure a domain name. If you don't have any domain name and don't want a **.nohost.me** / **.noho.st** / **.ynh.fr** either, you can set up a dummy domain such as `yolo.test` and tweak your **local** `/etc/hosts` file such that this dummy domain [points to the appropriate IP, as explained here](/admin/tutorials/domains/dns_local_network).
+This choice can be modified later, by adding other domains, changing which one is the main domain,
+or set specific applications to run on a different domain.
 :::
 
 ### <FAIcon icon="fa-key"/> First user
